// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extends a styled component with custom props 1`] = `
<Text
  style={
    {
      "fontSize": 20,
    }
  }
/>
`;

exports[`extends a styled component with custom props 2`] = `
<Text
  bar={true}
  style={
    {
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends a styled component with custom props 3`] = `
<Text
  bar={true}
  baz={true}
  style={
    {
      "color": "red",
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends a styled component with dynamic styles based on props 1`] = `
<Text
  style={{}}
/>
`;

exports[`extends a styled component with dynamic styles based on props 2`] = `
<Text
  style={
    {
      "padding": 0,
    }
  }
/>
`;

exports[`extends a styled component with dynamic styles based on props 3`] = `
<Text
  padded={true}
  style={
    {
      "padding": 10,
    }
  }
/>
`;

exports[`extends a styled component with empty dynamic styles 1`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with empty dynamic styles 2`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with empty static styles 1`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with empty static styles 2`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with extend() 1`] = `
<Text
  style={
    {
      "fontSize": 20,
    }
  }
/>
`;

exports[`extends a styled component with extend() 2`] = `
<Text
  style={
    {
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends a styled component with extend() 3`] = `
<Text
  style={
    {
      "color": "red",
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends a styled component with null dynamic styles 1`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with null dynamic styles 2`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with null static styles 1`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with null static styles 2`] = `
<View
  style={{}}
/>
`;

exports[`extends a styled component with styled(Styled) 1`] = `
<Text
  style={
    {
      "fontSize": 20,
    }
  }
/>
`;

exports[`extends a styled component with styled(Styled) 2`] = `
<Text
  style={
    {
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`extends a styled component with styled(Styled) 3`] = `
<Text
  style={
    {
      "color": "red",
      "fontSize": 20,
      "fontWeight": "bold",
    }
  }
/>
`;
